@@ -1,5 +1,9 @@
 2021-12-16  Mark Wielaard  <mark@klomp.org>
 
+	* link_map.c (dwfl_link_map_report): Make sure phnum is non-zero.
+
+2021-12-16  Mark Wielaard  <mark@klomp.org>
+
 	* link_map.c (dwfl_link_map_report): Make sure dyn_filesz / entsize is
 	non-zero.
 
